--- a/LayoutExercises/LayoutExercises/Base.lproj/Main.storyboard
+++ b/LayoutExercises/LayoutExercises/Base.lproj/Main.storyboard
@@ -21,21 +21,18 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample_image" translatesAutoresizingMaskIntoConstraints="NO" id="HKz-B9-SQf">
-                                <rect key="frame" x="16" y="180" width="343" height="217"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="217" id="v0v-mc-RNa"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="sample_image" translatesAutoresizingMaskIntoConstraints="NO" id="HKz-B9-SQf">
+                                <rect key="frame" x="16" y="178" width="343" height="180"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="HKz-B9-SQf" firstAttribute="leading" secondItem="egs-pr-gB0" secondAttribute="leading" id="9Es-hh-W5P"/>
-                            <constraint firstItem="HKz-B9-SQf" firstAttribute="top" secondItem="egs-pr-gB0" secondAttribute="bottom" constant="22" id="Ltr-2y-YVL"/>
-                            <constraint firstItem="HKz-B9-SQf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="MgD-Yp-oB1"/>
-                            <constraint firstItem="HKz-B9-SQf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="e91-a1-y2W"/>
-                            <constraint firstItem="egs-pr-gB0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="71" id="eFP-Ky-9D7"/>
-                            <constraint firstItem="HKz-B9-SQf" firstAttribute="trailing" secondItem="egs-pr-gB0" secondAttribute="trailing" id="vwE-XI-4VZ"/>
+                            <constraint firstItem="HKz-B9-SQf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="1MA-fT-QDK"/>
+                            <constraint firstItem="egs-pr-gB0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="71" id="1O7-oi-BCd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="egs-pr-gB0" secondAttribute="trailing" constant="16" id="TZu-GL-OCb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HKz-B9-SQf" secondAttribute="trailing" constant="16" id="dGc-6x-hxc"/>
+                            <constraint firstItem="HKz-B9-SQf" firstAttribute="top" secondItem="egs-pr-gB0" secondAttribute="bottom" constant="20" id="qq3-p0-qHq"/>
+                            <constraint firstItem="egs-pr-gB0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="z0Y-oZ-Pmx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
