--- a/SimpleLandmarkBook/SimpleLandmarkBook/Base.lproj/Main.storyboard
+++ b/SimpleLandmarkBook/SimpleLandmarkBook/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O2C-9N-tbO">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g3l-no-sqT">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
@@ -29,13 +29,76 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="8TQ-mP-1Ix"/>
                     <connections>
                         <outlet property="tableView" destination="g3l-no-sqT" id="NkP-PN-nhP"/>
+                        <segue destination="CxB-AK-apT" kind="show" identifier="toImageViewController" id="7Qw-K1-y7k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="tyh-5t-V2c">
+            <objects>
+                <viewController id="CxB-AK-apT" customClass="ImageViewController" customModule="SimpleLandmarkBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ped-Wt-xlN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w2y-ZY-yz0">
+                                <rect key="frame" x="20" y="125" width="374" height="242"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="242" id="wN1-11-3Le"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkB-Oz-Boh">
+                                <rect key="frame" x="20" y="438" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="w2y-ZY-yz0" firstAttribute="trailing" secondItem="Ped-Wt-xlN" secondAttribute="trailingMargin" id="KdD-eb-8wZ"/>
+                            <constraint firstItem="w2y-ZY-yz0" firstAttribute="leading" secondItem="hkB-Oz-Boh" secondAttribute="leading" id="LsZ-vw-euT"/>
+                            <constraint firstItem="w2y-ZY-yz0" firstAttribute="trailing" secondItem="hkB-Oz-Boh" secondAttribute="trailing" id="Qvm-uB-DlI"/>
+                            <constraint firstItem="hkB-Oz-Boh" firstAttribute="top" secondItem="w2y-ZY-yz0" secondAttribute="bottom" constant="71" id="cm5-fy-LOg"/>
+                            <constraint firstItem="w2y-ZY-yz0" firstAttribute="top" secondItem="2Yc-GF-qr9" secondAttribute="top" constant="37" id="iCx-ld-xqt"/>
+                            <constraint firstItem="hkB-Oz-Boh" firstAttribute="centerY" secondItem="Ped-Wt-xlN" secondAttribute="centerY" id="mWZ-YB-lQd"/>
+                            <constraint firstItem="w2y-ZY-yz0" firstAttribute="leading" secondItem="Ped-Wt-xlN" secondAttribute="leadingMargin" id="oGW-o0-J7O"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2Yc-GF-qr9"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3Q5-TF-Hgk"/>
+                    <connections>
+                        <outlet property="imageNames" destination="hkB-Oz-Boh" id="iCD-ld-VPZ"/>
+                        <outlet property="imageView" destination="w2y-ZY-yz0" id="mzA-5A-bTV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sf7-Ox-1qp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1915.9420289855075" y="137.94642857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="mU9-X8-TmH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="O2C-9N-tbO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cOn-cc-J7y">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="TgZ-cI-yGi"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o5V-x7-Gtl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
